# siriform-agent-chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PROGRESS.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_GUIDE.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  JWT_AUTHENTICATION.md  MULTI_SCHEMA_TESTING.md  README.md  SUPABASE_INTEGRATION.md  pyproject.toml
backend/app/: __init__.py  config.py  llm.py  main.py  models.py  test_auth.py  test_integration.py  test_schemas.py  test_supabase.py
backend/app/agent/: SiriAgent.py  __init__.py
backend/app/agent/tools/: __init__.py  analyzer.py  form_writer.py  history.py  lookup.py  question_asker.py  validator.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/routers/: __init__.py  auth.py
backend/app/schemas/: equipment_form.json  leave_request_form.json  meeting_room_form.json
backend/app/services/: __init__.py  auth_service.py  supabase_service.py
backend/database/: README.md  auth_schema.sql  schema.sql
backend/tests/: __init__.py  conftest.py  test_analyze_user_request.py  test_api_contract.py  test_ask_clarifying_question.py  test_langsmith_integration.py  test_lookup_information.py  test_lookup_user_history.py  test_update_form_data.py  test_validate_field.py
frontend/: .env.example
frontend/src/: App.css  App.tsx
frontend/src/services/: api.ts
scripts/: README.md  check-secrets.py  pre-commit
source_files/: legacy_equipment_form.ts
(+34 files in other folders)
